# shop_phones

./: README.MD  pyproject.toml
shop_phones/: db.sqlite3  manage.py
shop_phones/index/: admin.py  models.py  urls.py  views.py
shop_phones/index/management/commands/: _utils.py  fill_db.py
shop_phones/index/migrations/: 0001_initial.py
shop_phones/index/templates/index/: detail.html  index.html
shop_phones/shop_phones/: asgi.py  settings.py  urls.py  views.py  wsgi.py
shop_phones/shop_phones/templates/shop_phones/: base.html
