[tool.poetry]
name = "shop-phones"
version = "0.1.0"
description = "Pet phone shop"
authors = ["p-bogurenko-4 <vesert1@gmail.com>"]
readme = "README.md"
packages = [{include = "shop_phones"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
django-debug-toolbar = "^3.8.1"
faker = "^16.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
